# sistema-banco

./: .gitignore  CMakeLists.txt  Conta.cpp  Conta.h  ContaCorrente.cpp  ContaCorrente.h  ContaPoupanca.cpp  ContaPoupanca.h  GerenciadorBD.cpp  GerenciadorBD.h  LICENSE  README.md  banco_contas.db  main.cpp  sqlite3.h
include/: .gitignore  Conta.h  ContaCorrente.h  ContaPoupanca.h  GerenciadorBD.h
src/: Conta.cpp  ContaCorrente.cpp  ContaPoupanca.cpp  GerenciadorBD.cpp  main.cpp
